Cleanup on Search Page. Removed the full page reload of search, so things don't jump all around when selecting filters. Which adds lots of little checks for query existance throughout the page. Fixed a bug that was incorrectly formatting the url for browser history changes, so that he back button didn't work and resulted in a blank page in the search. Cleaned up the formatting of topic/category so it looks a little nicer. Default to relevance when text is present in search. Cleanup on resource details css, where an ng-deep issue would screw up the filter display in search page when rendered /after/ the resource page was loaded.

--- a/frontend/src/app/resource-detail/resource-detail.component.scss
+++ b/frontend/src/app/resource-detail/resource-detail.component.scss
@@ -1,14 +1,6 @@
-::ng-deep .mat-list .mat-list-item .mat-line {
-  word-wrap: break-word;
-  white-space: pre-wrap;
-}
-
-::ng-deep .mat-list .mat-list-item {
-  height: initial !important;
-}
 
 .mat-list-item {
-  margin: 1em 0;
+  margin: 10px 0;
 }
 
 address p {
